CSS Overflow bug fixed

--- a/css/sideNavbar_comman.css
+++ b/css/sideNavbar_comman.css
@@ -251,12 +251,20 @@
 
   width:calc(150% - 78px) ;
   min-width: calc(100% - 78px);
+  
 
 }
 
 .sidebar.open ~ .home-section{
   left: 250px;
   width: calc(100% - 250px);
+}
+
+.sidebar.open ~ .emp-home-section {
+  
+  left: 250px;
+  width: calc(150% - 250px);
+
 }
 
 .home-section .text{
